--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera!</title>
 </head>
 	<body>
-		<h1>Hello Coursera!</h1>
+		<h1 style="color: crimson; font-size: 72px; text-align: center;">Hello Coursera!</h1>
 	</body>
 </html>
