--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>Hello Coursera!</title>
 </head>
 	<body>
-		<h1 style="color: crimson; font-size: 72px; text-align: center;">Hello Coursera!</h1>
+		<h1 style="color: crimson; font-size: 72px; text-align: center;" onclick="alert('Hello, you stinking cotton-headed ninny-muggins')">Hello Coursera!</h1>
+		<h2 style="color: magenta; font-size: 72px; text-align: center;" onclick="alert('Suck it hoe!')">Is this the same size?!<h2>
 	</body>
 </html>
